--- a/jia13.html
+++ b/jia13.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <base href="http://u-u-x-l.oss-cn-hangzhou.aliyuncs.com"/>
+    <base href="http://x-d-y-3.oss-cn-hangzhou.aliyuncs.com"/>
     <link rel="icon" href="data:image/ico;base64,aWNv">
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
@@ -10,14 +10,8 @@
     <meta http-equiv="Pragma" content="public"/>
     <meta http-equiv="Cache-Control" content="public"/>
     <title>13人超级三加一</title>
-    <link rel="stylesheet" type="text/css" href="/files/css/jia31_13_daoyou_v1.css?v=xss1">
-    <link rel="stylesheet" type="text/css" href="/files/giftShop_dy/gift.css?v=s1">
-    <link rel="stylesheet" type="text/css" href="/files/css/skin.css?v=s1">
-    <link rel="stylesheet" type="text/css" href="/files/css/alertbox.css">
-    <link rel="stylesheet" type="text/css" href="/files/css/fuzhi.css">
-    <script type="text/javascript" src="/files/js/fastclick.js"></script>
     <script type="text/javascript">
-                var _thost = 'http://' + window.location.host;
+        var _thost = 'http://' + window.location.host;
         var pathArr = window.location.pathname.split("/");
         if(pathArr.length==3 && pathArr[1] != ""){
             if(pathArr[1].search(".html")!=-1){
@@ -25,11 +19,17 @@
             }else{
                 _thost = 'http://' + window.location.host + "/" + pathArr[1];
             }
-        }
-        var _tt = new Date().getTime();
-        document.write('<script type="text/javascript" src="' + _thost + '/js/config.js?v=1' + _tt + '"> <\/script>');
-    </script>
-    <script type="text/javascript" src="/js/load.js?v=11101"></script>
+        }          
+		var _tt = new Date().getTime();
+        document.write('<script type="text/javascript" src="' + _thost + '/js/config.js?v=' + _tt + '"> <\/script>');
+    </script>    
+    <link rel="stylesheet" type="text/css" href="/files/css/jia31_13_daoyou_v1.css?v=xss1">
+    <link rel="stylesheet" type="text/css" href="/files/giftShop_dy/gift.css?v=s1">
+    <link rel="stylesheet" type="text/css" href="/files/css/skin.css?v=s1">
+    <link rel="stylesheet" type="text/css" href="/files/css/alertbox.css">
+    <link rel="stylesheet" type="text/css" href="/files/css/fuzhi.css">
+    <script type="text/javascript" src="/files/js/fastclick.js"></script>
+    <script type="text/javascript" src="/js/load.js?v=123"></script>
     <script type="text/javascript">
         document.documentElement.style.fontSize = document.documentElement.clientWidth / 360 * 100 + 'px';
     </script>
@@ -1678,7 +1678,7 @@
             <i class="guestNum">{{guests.length}}</i>
         </span>
         <!-- 聊天室 -->
-        <img class="toChat" src="/files/images/daoyou/hall/btn_chat.png" v-on:click="goToChat">
+<!--        <img class="toChat" src="/files/images/daoyou/hall/btn_chat.png" v-on:click="goToChat">-->
         <!--
         <img class="bottomChat" src="/files/images/daoyou/game/send_to_chat.png" v-on:click="sendToChat" />
         -->
@@ -2005,7 +2005,7 @@
         </div>
         <div style="position: absolute;color: #fff;font-size: 0.15rem;"
              :style="globalData.maxCount>=9?'top: 4%;left: 50%;transform: translateX(-50%);':'top: 8%;left: 2%;'">
-            编号:{{userData.accountId}}
+            编号:{{userData.userCode}}
         </div>
 
         <!-- 发牌 ||p.account_status==6||p.account_status==7 -->
@@ -2785,12 +2785,12 @@
 <script type="text/javascript" src="/files/js/jquery.marquee.min.js"></script>
 <script type="text/javascript" src="/files/js/vue.min.js"></script>
 <script type="text/javascript" src="/files/js/vue-resource.min.js"></script>
-<script type="text/javascript" src="/files/js/jia31_daoyou8.js?v=120210510"></script>
-<script type="text/javascript" src="/files/js/giftFunc_dy.js?v=1bs2s21"></script>
-<script type="text/javascript" src="/files/js/gitView_daoyou.js?v=11s23s23"></script>
+<script type="text/javascript" src="/files/js/jia31_daoyou8.js?v=20210502"></script>
+<script type="text/javascript" src="/files/js/giftFunc_dy.js?v=bs2s21"></script>
+<script type="text/javascript" src="/files/js/gitView_daoyou.js?v=1s23s23"></script>
 <script src="/files/js/jquery.qrcode.min.js"></script>
 <script src="/files/js/qrcode.js"></script>
-<script src="/files/js/fuzhi_xl.js?v=12018"></script>
+<script src="/files/js/fuzhi_xl.js?v=2018"></script>
 <script src="/files/js/clipboard.min.js"></script>
 <script type="text/javascript">
     document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
