--- a/paijiu13.html
+++ b/paijiu13.html
@@ -1,22 +1,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <base href="http://u-u-x-l.oss-cn-hangzhou.aliyuncs.com"/>
+    <base href="http://x-d-y-3.oss-cn-hangzhou.aliyuncs.com"/>
     <link rel="icon" href="data:image/ico;base64,aWNv">
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="format-detection" content="telephone=no"/>
     <meta name="msapplication-tap-highlight" content="no"/>
     <title>13人小天九</title>
-    <link rel="stylesheet" type="text/css" href="/files/css/paijiu13_daoyou_v1.css?v=12s11">
-    <link rel="stylesheet" type="text/css" href="/files/css/alert.css">
-    <link rel="stylesheet" type="text/css" href="/files/css/ncomm.css">
-    <link rel="stylesheet" type="text/css" href="/files/css/alertbox.css">
-    <link rel="stylesheet" type="text/css" href="/files/giftShop_dy/gift.css?v=s1">
-    <link rel="stylesheet" type="text/css" href="/files/css/skin.css?v=s1">
-    <script type="text/javascript" src="/files/js/fastclick.js"></script>
     <script type="text/javascript">
-                var _thost = 'http://' + window.location.host;
+		var _thost = 'http://' + window.location.host;
         var pathArr = window.location.pathname.split("/");
         if(pathArr.length==3 && pathArr[1] != ""){
             if(pathArr[1].search(".html")!=-1){
@@ -24,11 +17,18 @@
             }else{
                 _thost = 'http://' + window.location.host + "/" + pathArr[1];
             }
-        }
-        var _tt = new Date().getTime();
-        document.write('<script type="text/javascript" src="' + _thost + '/js/config.js?v=1' + _tt + '"> <\/script>');
-    </script>
-    <script type="text/javascript" src="/js/load.js?v=11101"></script>
+        } 
+		var _tt = new Date().getTime();
+        document.write('<script type="text/javascript" src="' + _thost + '/js/config.js?v=' + _tt + '"> <\/script>');
+    </script>    
+    <link rel="stylesheet" type="text/css" href="/files/css/paijiu13_daoyou_v1.css?v=12s11">
+    <link rel="stylesheet" type="text/css" href="/files/css/alert.css">
+    <link rel="stylesheet" type="text/css" href="/files/css/ncomm.css">
+    <link rel="stylesheet" type="text/css" href="/files/css/alertbox.css">
+    <link rel="stylesheet" type="text/css" href="/files/giftShop_dy/gift.css?v=s1">
+    <link rel="stylesheet" type="text/css" href="/files/css/skin.css?v=s1">
+    <script type="text/javascript" src="/files/js/fastclick.js"></script>
+    <script type="text/javascript" src="/js/load.js?v=123"></script>
 
     <script type="text/javascript">
         document.documentElement.style.fontSize = document.documentElement.clientWidth / 360 * 100 + 'px';
@@ -1657,7 +1657,7 @@
 
     <div class="bottom-box" v-if="globalData.maxCount>9">
         <!-- 聊天室 -->
-        <img class="toChat" src="/files/images/daoyou/hall/btn_chat.png" v-on:click="goToChat">
+<!--        <img class="toChat" src="/files/images/daoyou/hall/btn_chat.png" v-on:click="goToChat">-->
         <!--二维码-->
         <img class="qrcode" src="/files/images/common/erweima.png" onclick="makeQrCode()">
         <div class="game-round" v-if="globalData.maxCount>9"><span>{{game.round}}</span>/<span>{{game.total_num}}</span>局
@@ -2008,7 +2008,7 @@
 
         <div style="position: absolute;color: #fff;font-size: 0.15rem;"
              :style="globalData.maxCount>=9?'top: 4%;left: 50%;transform: translateX(-50%);':'top: 8%;left: 2%;'">
-            编号:{{userData.accountId}}
+            编号:{{userData.userCode}}
         </div>
 
         <!-- 发牌 ||p.account_status==6||p.account_status==7 -->
@@ -2814,13 +2814,13 @@
 <script type="text/javascript" src="/files/js/jquery.marquee.min.js"></script>
 <script type="text/javascript" src="/files/js/vue.min.js"></script>
 <script type="text/javascript" src="/files/js/vue-resource.min.js"></script>
-<script type="text/javascript" src="/files/js/paijiu_daoyou7.js?v=120210510"></script>
-<script type="text/javascript" src="/files/js/giftFunc_dy.js?v=1bs2s21"></script>
-<script type="text/javascript" src="/files/js/gitView_daoyou.js?v=11s23s23"></script>
+<script type="text/javascript" src="/files/js/paijiu_daoyou7.js?v=20210502"></script>
+<script type="text/javascript" src="/files/js/giftFunc_dy.js?v=bs2s21"></script>
+<script type="text/javascript" src="/files/js/gitView_daoyou.js?v=1s23s23"></script>
 <script src="/files/js/jquery.qrcode.min.js"></script>
 <script src="/files/js/qrcode.js"></script>
 <script type="text/javascript" src="/files/js/clipboard.min.js"></script>
-<script type="text/javascript" src="/files/js/fuzhi_xl.js?v=1201809171"></script>
+<script type="text/javascript" src="/files/js/fuzhi_xl.js?v=201809171"></script>
 <script>
 
     var initX, initY, moveX, moveY, X = 0, Y = 0, objX = 0, flagX = 0;
