--- a/wx.html
+++ b/wx.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <base href="http://u-u-x-l.oss-cn-hangzhou.aliyuncs.com"/>
+    <base href="http://x-d-y-3.oss-cn-hangzhou.aliyuncs.com"/>
     <link rel="icon" href="data:image/ico;base64,aWNv">
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>大厅</title>
     <script type="text/javascript" src="/files/js/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="/js/config.js?v=120220101"></script>
-    <script type="text/javascript" src="/js/load.js?v=11101"></script>
+    <script type="text/javascript" src="/js/config.js?v=20220101"></script>
+    <script type="text/javascript" src="/js/load.js?v=123"></script>
     <script>
         var t = DynLoading.getUrlParam('t');
         var obj = null;
