--- a/dpj16.html
+++ b/dpj16.html
@@ -1,20 +1,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <base href="http://u-u-x-l.oss-cn-hangzhou.aliyuncs.com"/>
+    <base href="http://x-d-y-3.oss-cn-hangzhou.aliyuncs.com"/>
     <link rel="icon" href="data:image/ico;base64,aWNv">
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="format-detection" content="telephone=no"/>
     <meta name="msapplication-tap-highlight" content="no"/>
     <title>16人大天九</title>
-    <link rel="stylesheet" type="text/css" href="/files/css/paijiuD16_daoyou_v1.css?v=s1217">
-    <link rel="stylesheet" type="text/css" href="/files/giftShop_dy/gift.css?v=s1">
-    <link rel="stylesheet" type="text/css" href="/files/css/skin.css?v=s1">
-    <link rel="stylesheet" type="text/css" href="/files/css/alert.css">
-    <script type="text/javascript" src="/files/js/fastclick.js"></script>
     <script type="text/javascript">
-                var _thost = 'http://' + window.location.host;
+        var _thost = 'http://' + window.location.host;
         var pathArr = window.location.pathname.split("/");
         if(pathArr.length==3 && pathArr[1] != ""){
             if(pathArr[1].search(".html")!=-1){
@@ -24,9 +19,14 @@
             }
         }
         var _tt = new Date().getTime();
-        document.write('<script type="text/javascript" src="' + _thost + '/js/config.js?v=1' + _tt + '"> <\/script>');
-    </script>
-    <script type="text/javascript" src="/js/load.js?v=11101"></script>
+        document.write('<script type="text/javascript" src="' + _thost + '/js/config.js?v=' + _tt + '"> <\/script>');
+    </script>    
+    <link rel="stylesheet" type="text/css" href="/files/css/paijiuD16_daoyou_v1.css?v=s1217">
+    <link rel="stylesheet" type="text/css" href="/files/giftShop_dy/gift.css?v=s1">
+    <link rel="stylesheet" type="text/css" href="/files/css/skin.css?v=s1">
+    <link rel="stylesheet" type="text/css" href="/files/css/alert.css">
+    <script type="text/javascript" src="/files/js/fastclick.js"></script>
+    <script type="text/javascript" src="/js/load.js?v=123"></script>
 
     <script type="text/javascript">
         document.documentElement.style.fontSize = document.documentElement.clientWidth / 360 * 100 + 'px';
@@ -1624,7 +1624,7 @@
     </div>-->
 
     <!-- 聊天室 -->
-    <img class="toChat" src="/files/images/daoyou/hall/btn_chat.png" v-on:click="goToChat">
+<!--    <img class="toChat" src="/files/images/daoyou/hall/btn_chat.png" v-on:click="goToChat">-->
     <!--二维码-->
     <img class="qrcode" src="/files/images/common/erweima.png" onclick="makeQrCode()">
 
@@ -1753,7 +1753,7 @@
             房号:{{globalData.roomNumber}}
         </div>
         <div style="position: absolute;color: #fff;font-size: 0.15rem;top: 7%;left: 2%;">
-            编号:{{userData.accountId}}
+            编号:{{userData.userCode}}
         </div>
 
         <!-- 发牌 ||p.account_status==6||p.account_status==7 -->
@@ -2697,12 +2697,12 @@
 <script type="text/javascript" src="/files/js/jquery.marquee.min.js"></script>
 <script type="text/javascript" src="/files/js/vue.min.js"></script>
 <script type="text/javascript" src="/files/js/vue-resource.min.js"></script>
-<script type="text/javascript" src="/files/js/paijiuD_daoyou7.js?v=1sssxs1312"></script>
-<script type="text/javascript" src="/files/js/giftFunc_dy.js?v=1bs2s21"></script>
-<script type="text/javascript" src="/files/js/gitView_daoyou.js?v=11s23s23"></script>
+<script type="text/javascript" src="/files/js/paijiuD_daoyou7.js?v=sssxs1312"></script>
+<script type="text/javascript" src="/files/js/giftFunc_dy.js?v=bs2s21"></script>
+<script type="text/javascript" src="/files/js/gitView_daoyou.js?v=1s23s23"></script>
 <script src="/files/js/jquery.qrcode.min.js"></script>
 <script src="/files/js/qrcode.js"></script>
-<script type="text/javascript" src="/files/js/fuzhi_xl.js?v=1201809191"></script>
+<script type="text/javascript" src="/files/js/fuzhi_xl.js?v=201809191"></script>
 <script type="text/javascript" src="/files/js/clipboard.min.js"></script>
 <script>
     document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
