--- a/login.html
+++ b/login.html
@@ -2,17 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <base href="http://u-u-x-l.oss-cn-hangzhou.aliyuncs.com"/>
+    <base href="http://x-d-y-3.oss-cn-hangzhou.aliyuncs.com"/>
     <link rel="icon" href="data:image/ico;base64,aWNv">
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>大厅</title>
-    <script type="text/javascript" src="/files/js/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="/files/js/rem.js"></script>
-    <script type="text/javascript" src="/files/js/vue_z.js"></script>
-    <script type="text/javascript" src="/files/js/vue-resource.min.js"></script>
     <script type="text/javascript">
-                var _thost = 'http://' + window.location.host;
+        var _thost = 'http://' + window.location.host;
         var pathArr = window.location.pathname.split("/");
         if(pathArr.length==3 && pathArr[1] != ""){
             if(pathArr[1].search(".html")!=-1){
@@ -22,9 +18,13 @@
             }
         }
         var _tt = new Date().getTime();
-        document.write('<script type="text/javascript" src="' + _thost + '/js/config.js?v=1' + _tt + '"> <\/script>');
-    </script>
-    <script type="text/javascript" src="/js/load.js?v=11101"></script>
+        document.write('<script type="text/javascript" src="' + _thost + '/js/config.js?v=' + _tt + '"> <\/script>');
+    </script>    
+    <script type="text/javascript" src="/files/js/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="/files/js/rem.js"></script>
+    <script type="text/javascript" src="/files/js/vue_z.js"></script>
+    <script type="text/javascript" src="/files/js/vue-resource.min.js"></script>
+    <script type="text/javascript" src="/js/load.js?v=123"></script>
     <script>
         var t = DynLoading.getUrlParam('t');
         var obj = null;
@@ -50,7 +50,7 @@
         } else {
             let token = window.localStorage.getItem('token');
             if (token) {
-                let return_url = DynLoading.getPath('/');  
+                let return_url = DynLoading.getPath('/');
                 window.localStorage.removeItem('return_url');
                 window.location.href = return_url;
             }
