--- a/phoneUsers.html
+++ b/phoneUsers.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <base href="http://u-u-x-l.oss-cn-hangzhou.aliyuncs.com"/>
+    <base href="http://x-d-y-3.oss-cn-hangzhou.aliyuncs.com"/>
     <link rel="icon" href="data:image/ico;base64,aWNv">
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="/files/js/fastclick.js"></script>
     <link rel="stylesheet" type="text/css" href="/files/css/alert.css">
     <script type="text/javascript">
-                var _thost = 'http://' + window.location.host;
+		var _thost = 'http://' + window.location.host;
         var pathArr = window.location.pathname.split("/");
         if(pathArr.length==3 && pathArr[1] != ""){
             if(pathArr[1].search(".html")!=-1){
@@ -19,11 +19,11 @@
             }else{
                 _thost = 'http://' + window.location.host + "/" + pathArr[1];
             }
-        }
+        }  
         var _tt = new Date().getTime();
-        document.write('<script type="text/javascript" src="' + _thost + '/js/config.js?v=1' + _tt + '"> <\/script>');
+        document.write('<script type="text/javascript" src="' + _thost + '/js/config.js?v=' + _tt + '"> <\/script>');
     </script>
-    <script type="text/javascript" src="/js/load.js?v=11101"></script>
+    <script type="text/javascript" src="/js/load.js"></script>
     <style type="text/css">
         .buttonLeft2 {
             position: absolute;
